fixed frontpage images on mobile

--- a/assets/less/frontpage.less
+++ b/assets/less/frontpage.less
@@ -65,7 +65,8 @@ body.home{
             }
          }
          img{
-            width: 75%;
+            //width: 75%;
+            width: 45%;
             margin-right: 10px;
             margin-top: 5px;
             opacity: 0.75;
