--- a/assets/less/misc.less
+++ b/assets/less/misc.less
@@ -32,9 +32,7 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
-   .partners img{
-      width: 45% !important;
-   }
+   
 }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
